clusters/hive/apps/linkwarden/k8s-manifests/linkwarden-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: linkwarden
  name: linkwarden
  namespace: linkwarden
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: linkwarden
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: linkwarden
    spec:
      serviceAccountName: linkwarden
      # securityContext:
      #   runAsNonRoot: true
      #   runAsUser: 1000
      #   runAsGroup: 1000
      containers:
        - image: ghcr.io/linkwarden/linkwarden:v2.16.3
          name: linkwarden
          volumeMounts:
            - mountPath: /data/data
              name: linkwarden
      restartPolicy: Always
      volumes:
        - name: linkwarden
          persistentVolumeClaim:
            claimName: linkwarden
