clusters/hive/apps/linkwarden/k8s-manifests/meilisearch-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: linkwarden
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.54.3
          command:
            - tini
            - -- 
            - /bin/sh
            - -c
            - /bin/meilisearch --upgrade-db
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              memory: 1200Mi
          volumeMounts:
            - mountPath: /meili_data
              name: meilisearch
      volumes:
        - name: meilisearch
          persistentVolumeClaim:
            claimName: meilisearch
