clusters/hive/apps/linkwarden/k8s-manifests/postgres-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
  namespace: linkwarden
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: postgres
    spec:
      serviceAccountName: postgres
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - image: postgres:18.6
          name: postgres
          ports:
            - containerPort: 5432
              name: postgres
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
            limits:
              memory: 200Mi
          volumeMounts:
            # - mountPath: /var/lib/postgresql/data
            - mountPath: /var/lib/postgresql
              name: postgres-data
      restartPolicy: Always
      volumes:
        - name: postgres-data
          persistentVolumeClaim:
            claimName: postgres
