clusters/hive/apps/linkwarden/k8s-manifests/linkwarden-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linkwarden
  namespace: linkwarden
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/router.middlewares: traefik-redirect@kubernetescrd
spec:
  rules:
    - host: links.gavriliu.com
      http:
        paths:
          - backend:
              service:
                name: linkwarden
                port:
                  number: 3000
            path: /
            pathType: Prefix
